--- a/PT_Assistant_sergio/res/values/strings.xml
+++ b/PT_Assistant_sergio/res/values/strings.xml
@@ -2,10 +2,10 @@
 <resources>
 
     <string name="app_name">PT Assistant</string>
-    <string name="edit_message">Enter a message</string>
+    <string name="edit_message">Patient ID</string>
     <string name="action_settings">Settings</string>
-    <string name="title_activity_display_message">PT Assistant Message</string>
-    <string name="button_send">Send message</string> 
+    <string name="title_activity_display_message">PT Assistant Record</string>
+    <string name="button_send">Get Paitient Record</string> 
     <string name="action_search">Search</string>
    
 
