--- a/PT_Assistant/res/values/strings.xml
+++ b/PT_Assistant/res/values/strings.xml
@@ -4,9 +4,13 @@
     <string name="app_name">PT Assistant</string>
     <string name="edit_message">Patient ID</string>
     <string name="action_settings">Settings</string>
-    <string name="title_activity_display_message">PT Assistant Record</string>
-    <string name="button_send">Get Paitient Record</string> 
+    <string name="title_activity_display_message">PT Assistant: Patient Record</string>
+    <string name="button_get">Get Patient</string> 
     <string name="action_search">Search</string>
+    <string name="button_create_patient">Create Patient</string> 
+    <string name="patient_name">Name</string> 
+    <string name="patient_ID">Paitient ID</string> 
+    <string name="injury_id">Injury ID</string> 
    
 
 </resources>
