--- a/PT_Assistant/res/values/strings.xml
+++ b/PT_Assistant/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="edit_message">Patient ID</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_display_message">PT Assistant: Patient Record</string>
-    <string name="button_get">Get Patient</string> 
+    <string name="button_get">Get F Patient</string> 
     <string name="action_search">Search</string>
     <string name="button_create_patient">Create Patient</string> 
     <string name="patient_name">Name</string> 
