Formatting corrections, updates, and injury spinner

--- a/PT_Assistant/res/values/strings.xml
+++ b/PT_Assistant/res/values/strings.xml
@@ -38,5 +38,9 @@
     <string name="exerciseOne"></string>
     <string name="exerciseTwo"></string>
     <string name="exerciseThree"></string>
+    <string-array name="injury_array">
+        <item>LOWER BACK INJURY LUMBAR</item>
+        <item>ROTATOR CUFF TENDINITIS</item>
+    </string-array>
 
 </resources>
