--- a/PT_Assistant/res/values/strings.xml
+++ b/PT_Assistant/res/values/strings.xml
@@ -7,12 +7,12 @@
     <string name="action_register_patient">Register Patient</string>
     <string name="title_activity_display_message">PT Assistant: Patient Record</string>
     <string name="button_get">Get Patient</string>
-    <string name="button_Register">Regsiter Patient</string>
+    <string name="button_Register">Register Patient</string>
     <string name="button_update">Update Patient</string>
     <string name="action_search">Search</string>
     <string name="button_create_patient">Create Patient</string>
     <string name="patient_name">Name</string>
-    <string name="patient_ID">Paitient ID</string>
+    <string name="patient_ID">Patient ID</string>
     <string name="injury_id">Injury ID</string>
     <string name="title_record_created_activity">Patient Registration</string>
     <string name="radio_male">Male</string>
