Injury lookup interface created

--- a/PT_Assistant/res/values/strings.xml
+++ b/PT_Assistant/res/values/strings.xml
@@ -38,9 +38,12 @@
     <string name="exerciseOne"></string>
     <string name="exerciseTwo"></string>
     <string name="exerciseThree"></string>
+
     <string-array name="injury_array">
         <item>LUMBAR STRAIN</item>
         <item>ROTATOR CUFF TEAR</item>
     </string-array>
+
+    <string name="title_activity_injury_lookup">InjuryLookupActivity</string>
 
 </resources>
