Resolved errors and updated Treatment Plan logic

--- a/PT_Assistant/res/values/strings.xml
+++ b/PT_Assistant/res/values/strings.xml
@@ -42,9 +42,13 @@
     <string-array name="injury_array">
         <item>LUMBAR STRAIN</item>
         <item>ROTATOR CUFF TEAR</item>
+        <item>ACL TEAR</item>
     </string-array>
    
 
     <string name="title_activity_injury_lookup">InjuryLookupActivity</string>
+    <string name="title_activity_create_report">CreateReportActivity</string>
+    <string name="title_activity_trend_chart">TrendChartActivity</string>
+    <string name="title_activity_trend_chart_gui">TrendChartGUIActivity</string>
 
 </resources>
